[gd_scene load_steps=3 format=3 uid="uid://do1x6juovavkh"]

[ext_resource type="Script" path="res://target_color.gd" id="1_ocvhs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0oxs"]
size = Vector2(59, 52)

[node name="TargetColor" type="Node2D"]
script = ExtResource("1_ocvhs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -160.0
offset_top = -32.0
offset_right = -96.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -96.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0, 0, 1, 0)

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 32.0
offset_top = -32.0
offset_right = 96.0
offset_bottom = 32.0
mouse_filter = 2

[node name="ColorRect5" type="ColorRect" parent="."]
offset_left = 96.0
offset_top = -32.0
offset_right = 160.0
offset_bottom = 32.0
mouse_filter = 2

[node name="Button" type="Button" parent="."]
offset_left = -47.0
offset_top = -72.0
offset_right = 45.0
offset_bottom = -41.0
text = "new target"

[node name="accuracy" type="Label" parent="."]
offset_left = -46.0
offset_top = 42.0
offset_right = 55.0
offset_bottom = 65.0
text = "Accuracy: 0%"

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(59.5, 22)
shape = SubResource("RectangleShape2D_k0oxs")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
